--- a/html/premier.html
+++ b/html/premier.html
@@ -1,3 +1,12 @@
-1 Ma première page web
-<h1>Ceci est un titre de niveau 1</h1>
+<!DOCTYPE html>
+<html>
+<head>
 
+
+</head>
+<body>
+    Ma première page web
+    <h1>Ceci est un titre de niveau 1</h1>
+    <h2>Mon 2ème titre</h2>
+</body>
+</html>
