--- a/html/deuxieme.html
+++ b/html/deuxieme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Débuter en HTML</title>
+    
 </head>
 <body>
     <!--Ceci est un commentaire-->
@@ -13,7 +14,7 @@
     paragraphes. <br>
     Pour un saut de paragraphe il faut mettre un break.
     </p>
-    <p>On peut faire des liens avec la balise a.
+    <p class="deux">On peut faire des liens avec la balise a.
     <a href="https://www.happy-beez.net/">Voici mon lien</a>
     </p>
 
