--- a/index.html
+++ b/index.html
@@ -3,15 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ma première page</title>
+    <title>Débuter en HTML</title>
+    <link rel="stylesheet" href="./css/style.css">
+    
 </head>
 <body>
-    
-    coucou
+    <!--Ceci est un commentaire-->
+    <h1>Titre de niveau 1</h1>
+    <h2>Titre de niveau 2</h2>
+    <p>On remarque que le navigateur créé un saut de ligne entre les titres et les 
+    paragraphes. <br>
+    Pour un saut de paragraphe il faut mettre un break.
+    </p>
+    <p class="deux">On peut faire des liens avec la balise a.
+    <a href="https://www.happy-beez.net/">Voici mon lien</a>
+    </p>
 
 
+    <p>
+    Voici une liste sans ordre :
+    <ul>
+        <li>pain</li>
+        <li>lait</li>
+        <li>formage</li>
+    </ul>
 
+    Voici une liste avec ordre :
+    <ol>
+        <li>mettre le fromage sur le pain</li>
+        <li>manger le pain</li>
+        <li>boire le lait</li>
+    </ol>
+    </p>
 
-
+    <img src="/img/sabrina.jpg.jpg">
 </body>
 </html>
