--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Ceci est un commentaire-->
     <h1>Titre de niveau 1</h1>
     <h2>Titre de niveau 2</h2>
+    <div class="boite1">
     <p>On remarque que le navigateur créé un saut de ligne entre les titres et les 
     paragraphes. <br>
     Pour un saut de paragraphe il faut mettre un break.
@@ -18,7 +19,7 @@
     <p class="deux">On peut faire des liens avec la balise a.
     <a href="https://www.happy-beez.net/">Voici mon lien</a>
     </p>
-
+    </div>
 
     <p>
     Voici une liste sans ordre :
