--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
     </p>
 
     <img src="./img/sabrina.jpg.jpg">
+
+    <form action="" method="get">
+        <input type="text" name="login" id="login">
+        <input onclick="console.log('coucou')" type="button" value="Envoyer">
+    </form>
 </body>
 </html>
