--- a/index.html
+++ b/index.html
@@ -3,45 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Débuter en HTML</title>
-    <link rel="stylesheet" href="./css/style.css">
-    
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style2.css">
 </head>
 <body>
-    <!--Ceci est un commentaire-->
-    <h1>Titre de niveau 1</h1>
-    <h2>Titre de niveau 2</h2>
-    <div class="boite1">
-    <p>On remarque que le navigateur créé un saut de ligne entre les titres et les 
-    paragraphes. <br>
-    Pour un saut de paragraphe il faut mettre un break.
-    </p>
-    <p class="deux">On peut faire des liens avec la balise a.
-    <a href="https://www.happy-beez.net/">Voici mon lien</a>
-    </p>
-    </div>
-
-    <p>
-    Voici une liste sans ordre :
-    <ul>
-        <li>pain</li>
-        <li>lait</li>
-        <li>formage</li>
-    </ul>
-
-    Voici une liste avec ordre :
-    <ol>
-        <li>mettre le fromage sur le pain</li>
-        <li>manger le pain</li>
-        <li>boire le lait</li>
-    </ol>
-    </p>
-
-    <img src="./img/sabrina.jpg.jpg">
-
-    <form action="" method="get">
-        <input type="text" name="login" id="login">
-        <input onclick="console.log('coucou')" type="button" value="Envoyer">
+    <h1>Jouons avé Java le sang</h1>
+    <form action="">
+        <input type="range" name="range" id="range" value="75">
+        <input type="text" name="text" id="text">
+        <input type="button" value="Clique" id="btn">
+        <input type="checkbox" name="check" id="check1">
     </form>
+    <script>
+    let titre = document.querySelector('h1');
+    console.log(titre);
+    console.log(titre.textContent);
+
+    let presserLeBouton = false;
+    let bouton = document.getElementById("btn");
+    bouton.addEventListener('click', function(){
+        if (presserLeBouton == false) {
+        titre.textContent = "Nouveau titre avec JS";
+        titre.style.color = "red";
+        titre.style.fontSize = "40px";
+        presserLeBouton = true;
+        }
+        else {
+        titre.textContent = "Jouons avé Java le sang";
+        titre.style.color = "blue";
+        titre.style.fontSize = "32px";
+        presserLeBouton = false;
+        }
+    })
+
+    // let texte = document.getElementById("text");
+    // console.log(texte);
+    // texte.addEventListener('change', function() {
+    // console.log(texte.value);})
+
+    //let box = document.getElementById("check1");
+    //console.log(box);
+    //console.log(box.checked);
+    </script>
 </body>
 </html>
